feat: Added about dialog

--- a/ZZZDmgCalculator/Lang/Resources.resx
+++ b/ZZZDmgCalculator/Lang/Resources.resx
@@ -270,4 +270,7 @@
     <data name="Skills" xml:space="preserve">
         <value>Skills</value>
     </data>
+    <data name="AppName" xml:space="preserve">
+        <value>ZZZ Damage Calculator</value>
+    </data>
 </root>
