--- a/ZZZDmgCalculator/Lang/Resources.resx
+++ b/ZZZDmgCalculator/Lang/Resources.resx
@@ -114,6 +114,27 @@
     <data name="Agents.Rina" xml:space="preserve">
         <value>Rina</value>
     </data>
+    <data name="Agents.Anby" xml:space="preserve">
+        <value>Anby Demara</value>
+    </data>
+    <data name="Agents.Koleda" xml:space="preserve">
+        <value>Koleda Belobog</value>
+    </data>
+    <data name="Agents.Lucy" xml:space="preserve">
+        <value>Lucy</value>
+    </data>
+    <data name="Agents.Lycaon" xml:space="preserve">
+        <value>Von Lycaon</value>
+    </data>
+    <data name="Agents.Nicole" xml:space="preserve">
+        <value>Nicole Demara</value>
+    </data>
+    <data name="Agents.Qingyi" xml:space="preserve">
+        <value>Qingyi</value>
+    </data>
+    <data name="Agents.Soukaku" xml:space="preserve">
+        <value>Soukaku</value>
+    </data>
     <data name="Level" xml:space="preserve">
         <value>Level</value>
     </data>
@@ -272,5 +293,11 @@
     </data>
     <data name="AppName" xml:space="preserve">
         <value>ZZZ Damage Calculator</value>
+    </data>
+    <data name="Equipment" xml:space="preserve">
+        <value>Equipment</value>
+    </data>
+    <data name="EngineSelection" xml:space="preserve">
+        <value>Engine Selection</value>
     </data>
 </root>
