--- a/ZZZDmgCalculator/Lang/Resources.resx
+++ b/ZZZDmgCalculator/Lang/Resources.resx
@@ -301,6 +301,18 @@
         <value>Engine Selection</value>
     </data>
     <data name="Tooltip.RemoveEngine" xml:space="preserve">
-        <value>Remove Engine</value>
+        <value>Unequip Engine</value>
+    </data>
+    <data name="MainStat" xml:space="preserve">
+        <value>Main Stat</value>
+    </data>
+    <data name="DiscSelection" xml:space="preserve">
+        <value>Disc Selection</value>
+    </data>
+    <data name="Tooltip.RemoveDisc" xml:space="preserve">
+        <value>Unequip Disc</value>
+    </data>
+    <data name="AddSubStat" xml:space="preserve">
+        <value>Click to add sub stat</value>
     </data>
 </root>
